# cst3

./: .gitignore  CLAUDE.md  README.md  bootstrap.sh  config.toml.example  pyproject.toml
docs/: README.md
docs/superpowers/plans/: 2026-05-08-coder-scale-testing.md
docs/superpowers/specs/: 2026-05-08-coder-scale-testing-design.md  2026-05-08-spike-stage-4-app-traffic.md
src/coder_scale_test/: __init__.py  __main__.py  cleanup.py  coder_client.py  config.py  log.py  runner.py
src/coder_scale_test/stages/: __init__.py  app_traffic.py  dashboard.py  provision.py  ssh.py  users.py  web_terminal.py
tests/: conftest.py  test_cleanup.py  test_coder_client.py  test_config.py  test_log.py  test_main.py  test_runner.py
tests/stages/: test_app_traffic.py  test_dashboard.py  test_provision.py  test_ssh.py  test_users.py  test_web_terminal.py
